fix bug where side bar not collapsing correctly

--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,3 @@ code {
 .deployment-img {
   max-width: 710px;
 }
-
-#overall-architecture-img {
-  min-width: 1200px;
-}
